--- a/dockerfile/Dockerfile
+++ b/dockerfile/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:14.04
+FROM docker.io/ubuntu:14.04
 MAINTAINER theseaofstars "theseaofstars@live.cn"
 RUN apt-get update
 RUN apt-get install -y nginx
